# vector-db

./: .gitignore  LICENSE  PUBLISH.md  README.md  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  scratch.html  tags.html
.github/workflows/: deploy.yml
author/: nishanth-ravindran.html
category/: general.html
content/: introduction.md
feeds/: all.atom.xml  general.atom.xml
pelican-twitchy/templates/: base.html
simple-db/: README.md  articles.json  file_dsa.json  pyproject.toml
simple-db/src/: bow.pickle  database.py  helper.py  vectors.pickle
simple-db/svdb/: .gitignore  app.py  database.py  errors.py  helper.py  init.sh  main.py  test.py
static/: PUBLISH.md  pelicanconf.py  publishconf.py
static/simple-db/: introduction.md
tag/: database.html  develop.html  journey.html
