[tool.poetry]
name = "svdb"
version = "0.0.0"
description = "No ML implementation of vector database, from scratch."
authors = ["Nishanth Ravindran <ravindranno2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
requests = "^2.32.3"
nltk = "^3.9.1"
numpy = "^2.2.2"
beautifulsoup4 = "^4.12.3"
soupsieve = "^2.6"


[tool.poetry.scripts]
vdb = "svdb.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"